# esp32-c6-test

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig
app/test1/: CMakeLists.txt  linker.ld
app/test1/src/: main.cpp  main.s  test.s
app/test2/: CMakeLists.txt  linker.ld
app/test2/src/: entry.c  main.cpp
app/test3/: CMakeLists.txt
app/test3/src/: entry.c  entry.cpp  main.cpp
app/test4/: CMakeLists.txt  linker.ld
app/test4/src/: entry.c  main.c  main.cpp
app/test5/: CMakeLists.txt  linker.ld
app/test5/src/: entry.c  main.c
app/test6/: CMakeLists.txt
app/test6/src/: main.c
app/test7/: CMakeLists.txt
app/test7/src/: main.c
baremetal/: CMakeLists.txt  Makefile  linker.ld  packimage.py  textseg
baremetal/include/: badge_err.h  clkconfig.h  gpio.h  hardware.h  i2c.h  log.h  rawgpio.h  rawprint.h  time.h
baremetal/src/: clkconfig.c  entrypoint.S  gpio.c  i2c.c  int64.S  log.c  main.c  rawprint.c  time.c
components/i2c-ssd1306/: CMakeLists.txt  driver_ssd1306.c
components/i2c-ssd1306/include/: driver_ssd1306.h
lib/badgert/: CMakeLists.txt  Makefile
lib/badgert/include/: list_malloc.h
lib/badgert/src/: list_malloc.c  malloc.c  start.c
lib/libbadge/: CMakeLists.txt
lib/libbadge/include/: gpio.h  system.h
lib/libbadge/src/: gpio.c  system.c
lib/libcstub/: CMakeLists.txt  README.md
lib/libcstub/include/: malloc.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
lib/libcstub/include/cstubbits/: file.h  fpos_t.h
lib/libcstub/include_stubs/bits/: pthreadtypes-arch.h  wordsize.h
lib/libcstub/src/: malloc.c  stdio.c  stdlib.c  string.c
lib/libsubcxx/: CMakeLists.txt
lib/libsubcxx/include/: initializer_list  string
lib/libsubcxx/include/subcxxbits/: arraytype.hpp  reverse_iter.hpp
lib/libsubcxx/src/: string.cpp
lib/pax-graphics/: CMakeLists.txt  Makefile  import.cmake
lib/test1/: CMakeLists.txt
lib/test1/src/: main.cpp
lib/test2/: CMakeLists.txt
lib/test2/src/: main.c
lib/test3/: CMakeLists.txt  import.cmake
lib/test3/src/: main.c
main/: CMakeLists.txt  abi.cpp  ecall.s  main.cpp  main.cpp.bak  usercall.s
main/abi/: abi.cpp  abi.hpp  abicall.S  abiwrapper.S  kernel.cpp  kernel.hpp  kernel_include.S  runtime.cpp  runtime.hpp  trap.S
main/elfloader/: CMakeLists.txt
main/elfloader/src/: dynlinker.cpp  dynlinker.hpp  elfloader.cpp  elfloader.hpp  elfloader_int.hpp  elfloader_machine.hpp  mpu.cpp  mpu.hpp  progloader.cpp  progloader.hpp  relocation.cpp  relocation.hpp
main/elfloader/src/mpu/: mpu_riscv32_pmp.cpp
main/elfloader/src/relocation/: reloc_riscv.cpp
